--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         // Replace with your actual admin UID.
         // You can get this from Firebase Console -> Authentication -> Users after logging in as admin.
-        const ADMIN_UID = 'YOUR_ADMIN_UID_HERE'; // <<< GANTI DENGAN UID ADMIN ANDA YANG SEBENARNYA
+        const ADMIN_UID = '1eaKUy41VMQJJqVNtknHvTNYMQr2'; // <<< GANTI DENGAN UID ADMIN ANDA YANG SEBENARNYA
 
         // Firebase Configuration (for deployment outside Canvas environment)
         // If running in Canvas, __firebase_config and __initial_auth_token are provided globally.
