--- a/index.html
+++ b/index.html
@@ -76,22 +76,20 @@
         let isAdmin = false;
         let isGeneratingDescription = false; // Status untuk loading LLM
 
-        // UID Admin Anda yang sudah dimasukkan
+        // UID Admin Anda
         const ADMIN_UID = '1eaKUy41VMQJJqVNtknHvTNYMQr2';
 
-        // Konfigurasi Firebase (untuk deployment di luar lingkungan Canvas)
-        // Jika berjalan di Canvas, __firebase_config dan __initial_auth_token disediakan secara global.
-        const firebaseConfig = typeof __firebase_config !== 'undefined'
-            ? JSON.parse(__firebase_config)
-            : {
-                apiKey: "AIzaSyC4YNnmBQE2nkD0fCQ_LEI_WAwK51ItebY",
-                authDomain: "server-f20df.firebaseapp.com",
-                projectId: "server-f20df",
-                storageBucket: "server-f20df.firebasestorage.app",
-                messagingSenderId: "1042741872334",
-                appId: "1:1042741872334:web:6c698e164bd6758ed9329f",
-                measurementId: "G-JFN5SET77S"
-            };
+        // Konfigurasi Firebase Anda yang baru
+        const firebaseConfig = {
+          apiKey: "AIzaSyDt9JHvJpLKnU3zI1uqOq3scOLIeiQSnl4",
+          authDomain: "minecraftweb-8fc71.firebaseapp.com",
+          projectId: "minecraftweb-8fc71",
+          storageBucket: "minecraftweb-8fc71.firebasestorage.app",
+          messagingSenderId: "190426156767",
+          appId: "1:190426156767:web:bce92703bc2632dca1e36a",
+          measurementId: "G-ZGKJT18EY1"
+        };
+
 
         // Inisialisasi Firebase
         function initializeFirebase() {
@@ -100,6 +98,7 @@
                 db = getFirestore(app);
                 auth = getAuth(app);
 
+                // initialAuthToken hanya ada di lingkungan Canvas, jadi di luar itu akan null
                 const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
                 if (initialAuthToken) {
