--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
     </main>
 
     <!-- Bagian Footer -->
-    <footer class="bg-gray-900 text-gray-400 py-6 text-center">
-        <p>&copy; 2025 Toko Senjata IC SAMP. Hak Cipta Dilindungi.</p>
+    <footer class="bg-gray-900 text-gray-400 py-6 text-center w-full">
+        <p class="mb-2">&copy; 2025 Toko Senjata IC SAMP. Hak Cipta Dilindungi.</p>
         <div class="mt-2">
+            <!-- PENTING: GANTI LINK DISCORD INI DENGAN LINK SERVER DISCORD ANDA YANG SEBENARNYA -->
             <a
-                href="https://discord.gg/your-discord-link" <!-- GANTI DENGAN LINK DISCORD SERVER ANDA -->
+                href="https://discord.gg/your-discord-link"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="text-blue-400 hover:text-blue-300 transition duration-300"
+                class="text-blue-400 hover:text-blue-300 transition duration-300 text-lg font-semibold"
             >
                 Gabung Discord Definitive Roleplay
             </a>
@@ -77,9 +78,9 @@
         let isGeneratingDescription = false; // Status untuk loading LLM
 
         // UID Admin Anda
-        const ADMIN_UID = '3abIdzymWtg1kOs7zVN7618eepc2';
+        const ADMIN_UID = '1eaKUy41VMQJJqVNtknHvTNYMQr2';
 
-        // Konfigurasi Firebase Anda yang baru
+        // Konfigurasi Firebase Anda
         const firebaseConfig = {
           apiKey: "AIzaSyDt9JHvJpLKnU3zI1uqOq3scOLIeiQSnl4",
           authDomain: "minecraftweb-8fc71.firebaseapp.com",
