--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         let isGeneratingDescription = false; // Status untuk loading LLM
 
         // UID Admin Anda (GANTI DENGAN UID AKUN EMAIL/PASSWORD ADMIN YANG ANDA BUAT DI FIREBASE)
-        const ADMIN_UID = 'YOUR_ADMIN_UID_HERE'; // <<< GANTI DENGAN UID ADMIN ANDA YANG SEBENARNYA
+        const ADMIN_UID = 'Y8PfnW65zGbTdSn0UBDBc825pMu2'; // <<< GANTI DENGAN UID ADMIN ANDA YANG SEBENARNYA
 
         // Konfigurasi Firebase Anda
         const firebaseConfig = {
