--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-    <style>JT
+    <style>
         body {
             font-family: 'Inter', sans-serif;
             margin: 0;
@@ -101,7 +101,7 @@
         let isGeneratingDescription = false; // Status untuk loading LLM
 
         // UID Admin Anda (GANTI DENGAN UID AKUN EMAIL/PASSWORD ADMIN YANG ANDA BUAT DI FIREBASE)
-        const ADMIN_UID = 'Y8PfnW65zGbTdSn0UBDBc825pMu2'; // <<< GANTI DENGAN UID ADMIN ANDA YANG SEBENARNYA
+        const ADMIN_UID = 'Y8PfnW65zGbTdSn0UBDBc825pMu2'; // <<< UID ADMIN ANDA YANG BARU
 
         // Konfigurasi Firebase Anda
         const firebaseConfig = {
